--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,18 @@ h2 {
 .hide {
     display:none;
 }
-#submit-button, #city {
+#submit-button, #city, #country {
 margin-top: 5%;
+margin-bottom: 5%;
 width: 100%;
 height: 4vh;
 background-color: white;
 color: rgb(67, 1, 67);
+}
+ul {
+ list-style-type: none;   
+ margin: 2vh;
+}
+li {
+    margin:2vh;
 }
