--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,43 +3,81 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
+
 h1 {
     margin-top: 1%;
     font-size: 150%;
     text-align: center;
 }
+
 h2 {
     font-size: 125%;
 }
+
 .columns {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
 }
+
 .left-column {
     padding: 2%;
     flex: 15%;
 }
+
 .right-column {
-    padding:2%;
+    padding: 2%;
     flex: 80%;
 }
-.hide {
-    display:none;
+
+.hide{
+    display: none;
 }
-#submit-button, #city, #country {
-margin-top: 5%;
-margin-bottom: 5%;
-width: 100%;
-height: 4vh;
-background-color: white;
-color: rgb(67, 1, 67);
+
+.show{
+    display: flex;
 }
+#submit-button,
+#city,
+#country {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 100%;
+    height: 4vh;
+    background-color: white;
+    color: rgb(67, 1, 67);
+}
+
 ul {
- list-style-type: none;   
- margin: 2vh;
+    list-style-type: none;
+    margin: 2vh;
 }
+
 li {
-    margin:2vh;
+    margin: 2vh;
+}
+
+.forecast-columns {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.column-one,
+.column-two,
+.column-three,
+.column-four,
+.column-five {
+    background-color: white;
+    width: 16%;
+    margin: 1%;
+    height: 30vh;
+}
+
+#ForecastTitle {
+    margin-left: 3%;
+    margin-top: 5%;
+    margin-bottom: 2%
 }
